uitwerking van huiswerk

--- a/pages/index.html
+++ b/pages/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-
+<h1>dit is een test</h1>
+<p>dit is een test voro het maken van een nieuwe pagina</p>
 </body>
 </html>
